# shadeMS

./: .travis.yml  README.md  pyproject.toml  setup.py  shadeMS.py  shadems.py  test-dataframe-factory.py
.github/workflows/: ci.yml  publish_package.yml
.travis/: mypy.docker  pep8.docker  py2.docker  py3.docker
ShadeMS/: __init__.py  data_mappers.py  main.py  ms_info.py  shadeMS.py
essays/: avg.py  test_reduce_vis_data.py
shade_ms/: __init__.py  __main__.py  dask_utils.py  data_mappers.py  data_plots.py  ds_ext.py  main.py  ms_info.py
shade_ms/tests/: Makefile  README  README.md  check-shadems-functionality.sh  test_dask_utils.py
